[metadata]
name = typhoon
author = Ryan Scott Brown
author-email = sb@ryansb.com
summary = Destroyer of worlds
description-file = README.md
license = GPLv3+
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.3
keywords =
    courseware
    hflossk
[files]
packages =
    typhoon
[entry_points]
console_scripts =
    typhoon = typhoon:main
