[metadata]
name = typhoon
author = Ryan Scott Brown
author-email = sb@ryansb.com
summary = Destroyer of worlds
description-file = README.md
license = AGPLv3+
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.3
keywords =
    courseware
    hflossk
[files]
packages =
    typhoon
    typhoon.client
    typhoon.server
    typhoon.server.handlers
    typhoon.server.models
    typhoon.server.clients
[entry_points]
console_scripts =
    typhoon-client = typhoon:run_client
    typhoon-server = typhoon:run_server
